--- a/App.css
+++ b/App.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: rgb(248, 165, 62);
 }
 .App{
   margin: 0%;
@@ -15,8 +16,8 @@ body {
   align-items: center;
   border: 1px solid black;
   padding: 0 40px;
-  background-color: rgb(4, 36, 95);
-  color: white;
+  background-color: rgb(6, 18, 50);
+  color: rgb(253, 253, 253);
 }
 .ul-container {
   display : flex;
@@ -28,7 +29,7 @@ body {
   height :100px;
 }
 .ul-container li {
-  font-size: larger;
+  font-size: 25px;
   font-style: italic;
 }
 .card-container{
@@ -55,19 +56,60 @@ body {
 
 .res-img img{
   width : 200px;
-  height: 100px;
+  height: 200px;
 }
 .card-container{
   border: 4px solid rgb(3, 3, 3);
-  height: 300px;
+  font-family:Verdana;
   width: 200px;
-  padding: 20px;
+  padding: 10px;
   margin: 20px ;
-  background-color: rgb(238, 223, 176);
+  background-color: rgb(249, 250, 251);
   display: flex;
   flex-direction: column;
+  margin-bottom: 4px;
+  margin-top: 4px;
 }
 .card-container:hover{
-  border : 4px solid red ;
-  background-color: aqua;
+  background-color: rgb(219, 218, 217);
+  transform: scale(1.05);
+  box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+
+}
+
+.ul-container li:hover {
+  color : yellow;
+  font-size: 30px;
+  font-weight: 500px;
+}
+
+.search button{
+ height : 40px;
+ width : 140px;
+ background-color: red;
+ color: aliceblue;
+ box-shadow: 3px 3px rgb(91, 88, 88);
+ 
+}
+.search button:hover{
+    transform: scale(1.05);
+  box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+}
+
+.fakeCard{
+  height : 340px ;
+  width : 210px ;
+  flex-wrap: wrap;
+  
+  margin: 20px ;
+  background-color: rgb(249, 250, 251);
+}
+.logo-div{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: rgb(255, 251, 0);
+}
+
+.card-container h3,h5{
+  margin-bottom: 4px;
+  margin-top: 4px;
 }
